# eff-dialect

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
eff-opt/: CMakeLists.txt  eff-opt.cpp
eff-plugin/: CMakeLists.txt  eff-plugin.cpp
eff-translate/: CMakeLists.txt  eff-translate.cpp
include/: CMakeLists.txt
include/Eff/: CMakeLists.txt  EffDialect.h  EffDialect.td  EffOps.h  EffOps.td  EffPasses.h  EffPasses.td  EffTypes.h  EffTypes.td
include/Eff-c/: Dialects.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Eff/: CMakeLists.txt  EffDialect.cpp  EffOps.cpp  EffPasses.cpp  EffTypes.cpp
python/: CMakeLists.txt  EffExtensionNanobind.cpp  EffExtensionPybind11.cpp
python/mlir_eff/dialects/: EffOps.td  eff_nanobind.py  eff_pybind11.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  eff-capi-test.c
test/Eff/: dummy.mlir  eff-canonical.mlir  eff-empty.mlir  eff-nested-handled.mlir  eff-nested-not-handled.mlir  eff-opt.mlir  eff-pass-plugin.mlir  eff-plugin.mlir  eff-translate.mlir
test/python/: smoketest.py
